[package]
name = "rust-roadmap"
version = "0.1.0"
edition = "2024"

[lib]
name = "rust_roadmap"
path = "src/lib.rs"

[dependencies]
# Web Framework
leptos = { version = "0.8", features = ["csr"] }

# Web APIs for DOM manipulation
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "DomRect",
    "ScrollToOptions",
    "ScrollBehavior",
    "Storage",
] }

# Logging & Error handling
console_error_panic_hook = "0.1"
log = "0.4"
console_log = "1"
